Reinstate api4kp-examples